REL-3310: Addition of spdb init.d script, and removal of obsolete JVM parameters.